--- a/cmu-lending-platform/package.json
+++ b/cmu-lending-platform/package.json
@@ -12,9 +12,11 @@
     "@ant-design/nextjs-registry": "^1.0.0",
     "@ant-design/web3": "^1.15.1",
     "@ant-design/web3-wagmi": "^2.7.0",
+    "@material-tailwind/react": "^2.1.9",
     "@rainbow-me/rainbowkit": "^2.1.3",
     "@tanstack/react-query": "^5.51.9",
     "antd": "^5.19.2",
+    "ethers": "^6.13.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
@@ -25,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
