--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.1.3",
     "@tanstack/react-query": "^5.51.1",
+    "dotenv": "^16.4.5",
+    "ethers": "5.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
