--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
     "dependencies": {
-      "@openzeppelin/contracts": "^5.0.2",
-      "openzeppelin-solidity": "^3.4.2",
-      "yarn": "^1.22.22"
+        "@openzeppelin/contracts": "^5.0.2",
+        "openzeppelin-solidity": "^3.4.2",
+        "yarn": "^1.22.22"
     },
-    "name": "Forms",
+    "name": "forms",
     "version": "1.0.0",
     "main": "index.js",
-    "repository": "https://github.com/Forms-intern/Forms.git",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Forms-intern/Forms.git"
+    },
     "author": "Jorey717 <609019479@qq.com>",
-    "license": "MIT"
-  }
+    "license": "MIT",
+    "description": "",
+    "devDependencies": {},
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "bugs": {
+        "url": "https://github.com/Forms-intern/Forms/issues"
+    },
+    "homepage": "https://github.com/Forms-intern/Forms#readme"
+}
