--- a/cmu-lending-platform/package.json
+++ b/cmu-lending-platform/package.json
@@ -13,13 +13,13 @@
     "@ant-design/web3": "^1.15.1",
     "@ant-design/web3-wagmi": "^2.7.0",
     "@rainbow-me/rainbowkit": "^2.1.3",
-    "@tanstack/react-query": "^5.51.9",
-    "antd": "^5.19.2",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
-    "viem": "2.x",
-    "wagmi": "^2.11.2"
+    "@tanstack/react-query": "^5.51.11",
+    "antd": "^5.19.3",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "viem": "^2.17.8",
+    "wagmi": "^2.11.3"
   },
   "devDependencies": {
     "@types/node": "^20",
