--- a/cmu-lending-platform/package.json
+++ b/cmu-lending-platform/package.json
@@ -13,6 +13,7 @@
     "@ant-design/pro-components": "^2.7.14",
     "@ant-design/web3": "^1.15.1",
     "@ant-design/web3-wagmi": "^2.7.0",
+    "@emotion/css": "^11.13.0",
     "@rainbow-me/rainbowkit": "^2.1.3",
     "@tanstack/react-query": "^5.51.9",
     "antd": "^5.19.2",
