--- a/cmu-lending-platform/package.json
+++ b/cmu-lending-platform/package.json
@@ -22,7 +22,8 @@
     "react": "^18",
     "react-dom": "^18",
     "viem": "2.x",
-    "wagmi": "^2.11.2"
+    "wagmi": "^2.11.2",
+    "web3-avatar": "^1.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
