--- a/cmu-lending-platform/package.json
+++ b/cmu-lending-platform/package.json
@@ -21,6 +21,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.25.1",
     "viem": "2.x",
     "wagmi": "^2.11.2",
     "web3-avatar": "^1.0.4"
