--- a/cmu-lending-platform/package.json
+++ b/cmu-lending-platform/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.0",
-    "@ant-design/pro-components": "^2.7.14",
     "@ant-design/web3": "^1.15.1",
     "@ant-design/web3-wagmi": "^2.7.0",
-    "@emotion/css": "^11.13.0",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@rainbow-me/rainbowkit": "^2.1.3",
     "@tanstack/react-query": "^5.51.9",
     "antd": "^5.19.2",
