--- a/cmu-lending-platform/package.json
+++ b/cmu-lending-platform/package.json
@@ -17,7 +17,9 @@
     "@rainbow-me/rainbowkit": "^2.1.3",
     "@tanstack/react-query": "^5.51.11",
     "antd": "^5.19.3",
+    "encoding": "^0.1.13",
     "next": "^14.2.5",
+    "pino-pretty": "^11.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "viem": "^2.17.8",
