--- a/cmu-lending-platform/package.json
+++ b/cmu-lending-platform/package.json
@@ -20,6 +20,7 @@
     "encoding": "^0.1.13",
     "next": "^14.2.5",
     "pino-pretty": "^11.2.2",
+    "punycode": "^2.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "viem": "^2.17.8",
