--- a/cmu-lending-platform/package.json
+++ b/cmu-lending-platform/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.13.0",
     "@rainbow-me/rainbowkit": "^2.1.3",
     "@tanstack/react-query": "^5.51.11",
+    "@vercel/postgres": "^0.9.0",
     "antd": "^5.19.3",
     "encoding": "^0.1.13",
     "next": "^14.2.5",
