--- a/cmu-lending-platform/package.json
+++ b/cmu-lending-platform/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.51.11",
     "@vercel/postgres": "^0.9.0",
     "antd": "^5.19.3",
+    "dotenv": "^16.4.5",
     "encoding": "^0.1.13",
     "next": "^14.2.5",
     "pino-pretty": "^11.2.2",
@@ -29,6 +30,10 @@
     "web3-avatar": "^1.0.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-typescript": "^7.24.7",
+    "@babel/register": "^7.24.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
