chore: Update npm dependency to latest stable version and add animate.css library

--- a/cmu-lending-platform/package.json
+++ b/cmu-lending-platform/package.json
@@ -17,6 +17,7 @@
     "@rainbow-me/rainbowkit": "^2.1.3",
     "@tanstack/react-query": "^5.51.11",
     "@vercel/postgres": "^0.9.0",
+    "animate.css": "^4.1.1",
     "antd": "^5.19.3",
     "dotenv": "^16.4.5",
     "encoding": "^0.1.13",
