--- a/cmu-lending-platform/package.json
+++ b/cmu-lending-platform/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^18.3.1",
     "viem": "^2.17.8",
     "wagmi": "^2.11.3",
-    "web3-avatar": "^1.0.4"
+    "web3-avatar": "^1.0.4",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
